// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "akkaserverless/annotations.proto";

package js.chirp.api;

message ChirpRequest {
    string user_name = 1 [(akkaserverless.field).entity_key = true];
    string token = 2;
    string text = 3;
}

message LikeRequest  {
    string user_name = 1 [(akkaserverless.field).entity_key = true];
    string token = 2;
    string chirp_id = 3;
}

message GetChirpsRequest  {
    string user_name = 1 [(akkaserverless.field).entity_key = true];
    string token = 2;
}

message Chirp {
    string chirp_id = 1;
    string text = 3;
    int32 likes = 4;
}

message Chirps {
    string user_name = 1;
    repeated Chirp chirps = 2;
}

service ChirpService {
    rpc Chirp(ChirpRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/chirps/{user_name}"
            body: "*"
        };
    }

    rpc Like(LikeRequest) returns (google.protobuf.Empty) {
        option (google.api.http).put = "/chirps/{user_name}/chirp/{chirp_id}/like";
    }

    rpc GetChirps(GetChirpsRequest) returns (Chirps) {
        option (google.api.http) = {
            get: "/chirps/{user_name}"
        };
    }
}